--- a/landing/index.html
+++ b/landing/index.html
@@ -54,7 +54,7 @@
         "offers": {
             "@type": "Offer",
             "price": "0",
-            "priceCurrency": "USD"
+            "priceCurrency": "INR"
         },
         "aggregateRating": {
             "@type": "AggregateRating",
@@ -586,12 +586,12 @@
                 </div>
             </div>
             <div class="row g-4 justify-content-center">
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="pricing-card">
                         <div class="pricing-header">
                             <h3 class="plan-name">Starter</h3>
                             <div class="plan-price">
-                                <span class="currency">$</span>
+                                <span class="currency">₹</span>
                                 <span class="amount">0</span>
                                 <span class="period">/month</span>
                             </div>
@@ -599,11 +599,11 @@
                         </div>
                         <div class="pricing-features">
                             <ul class="feature-list">
-                                <li><i class="fas fa-check"></i> Up to 50 customers</li>
-                                <li><i class="fas fa-check"></i> Basic order management</li>
-                                <li><i class="fas fa-check"></i> Simple invoicing</li>
+                                <li><i class="fas fa-check"></i> Up to 30 customers</li>
+                                <li><i class="fas fa-check"></i> Up to 50 orders</li>
+                                <li><i class="fas fa-check"></i> Basic reporting</li>
                                 <li><i class="fas fa-check"></i> Email support</li>
-                                <li><i class="fas fa-check"></i> Mobile responsive</li>
+                                <li><i class="fas fa-check"></i> 1 user account</li>
                             </ul>
                         </div>
                         <div class="pricing-footer">
@@ -611,52 +611,81 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
+                    <div class="pricing-card">
+                        <div class="pricing-header">
+                            <h3 class="plan-name">Basic</h3>
+                            <div class="plan-price">
+                                <span class="currency">₹</span>
+                                <span class="amount">99</span>
+                                <span class="period">/month</span>
+                            </div>
+                            <p class="plan-description">Perfect for small businesses</p>
+                        </div>
+                        <div class="pricing-features">
+                            <ul class="feature-list">
+                                <li><i class="fas fa-check"></i> Up to 100 customers</li>
+                                <li><i class="fas fa-check"></i> Up to 150 orders</li>
+                                <li><i class="fas fa-check"></i> Advanced reporting</li>
+                                <li><i class="fas fa-check"></i> Priority email support</li>
+                                <li><i class="fas fa-check"></i> Up to 3 users</li>
+                                <li><i class="fas fa-check"></i> SMS notifications</li>
+                            </ul>
+                        </div>
+                        <div class="pricing-footer">
+                            <a href="../register.php" class="btn btn-outline-primary w-100">Choose Basic</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
                     <div class="pricing-card featured">
                         <div class="pricing-badge">Most Popular</div>
                         <div class="pricing-header">
-                            <h3 class="plan-name">Professional</h3>
+                            <h3 class="plan-name">Premium</h3>
                             <div class="plan-price">
-                                <span class="currency">$</span>
-                                <span class="amount">29</span>
+                                <span class="currency">₹</span>
+                                <span class="amount">199</span>
                                 <span class="period">/month</span>
                             </div>
                             <p class="plan-description">Ideal for growing businesses</p>
                         </div>
                         <div class="pricing-features">
                             <ul class="feature-list">
-                                <li><i class="fas fa-check"></i> Unlimited customers</li>
-                                <li><i class="fas fa-check"></i> Advanced order tracking</li>
-                                <li><i class="fas fa-check"></i> Professional invoicing</li>
-                                <li><i class="fas fa-check"></i> Employee management</li>
-                                <li><i class="fas fa-check"></i> Analytics & reports</li>
-                                <li><i class="fas fa-check"></i> Priority support</li>
+                                <li><i class="fas fa-check"></i> Up to 500 customers</li>
+                                <li><i class="fas fa-check"></i> Up to 1,000 orders</li>
+                                <li><i class="fas fa-check"></i> Advanced reporting & analytics</li>
+                                <li><i class="fas fa-check"></i> Priority support (24/7)</li>
+                                <li><i class="fas fa-check"></i> Up to 10 users</li>
+                                <li><i class="fas fa-check"></i> SMS notifications</li>
+                                <li><i class="fas fa-check"></i> Export data</li>
                             </ul>
                         </div>
                         <div class="pricing-footer">
-                            <a href="../register.php" class="btn btn-primary w-100">Choose Professional</a>
+                            <a href="../register.php" class="btn btn-primary w-100">Choose Premium</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="pricing-card">
                         <div class="pricing-header">
                             <h3 class="plan-name">Enterprise</h3>
                             <div class="plan-price">
-                                <span class="currency">$</span>
-                                <span class="amount">99</span>
+                                <span class="currency">₹</span>
+                                <span class="amount">999</span>
                                 <span class="period">/month</span>
                             </div>
                             <p class="plan-description">For large tailoring units</p>
                         </div>
                         <div class="pricing-features">
                             <ul class="feature-list">
-                                <li><i class="fas fa-check"></i> Everything in Professional</li>
-                                <li><i class="fas fa-check"></i> Multi-location support</li>
-                                <li><i class="fas fa-check"></i> Advanced analytics</li>
-                                <li><i class="fas fa-check"></i> API access</li>
+                                <li><i class="fas fa-check"></i> Unlimited customers</li>
+                                <li><i class="fas fa-check"></i> Unlimited orders</li>
+                                <li><i class="fas fa-check"></i> Premium analytics & insights</li>
+                                <li><i class="fas fa-check"></i> Dedicated account manager</li>
+                                <li><i class="fas fa-check"></i> Unlimited users</li>
                                 <li><i class="fas fa-check"></i> Custom integrations</li>
-                                <li><i class="fas fa-check"></i> 24/7 phone support</li>
+                                <li><i class="fas fa-check"></i> Training & onboarding</li>
+                                <li><i class="fas fa-check"></i> SLA guarantee</li>
                             </ul>
                         </div>
                         <div class="pricing-footer">
@@ -741,15 +770,15 @@
                         <h5 class="link-title">Contact Info</h5>
                         <div class="contact-item">
                             <i class="fas fa-envelope me-2"></i>
-                            <span>support@tailorpro.com</span>
+                            <span>codelockinfo@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone me-2"></i>
-                            <span>+1 (555) 123-4567</span>
+                            <span>+91 7600464414</span>
                         </div>
                         <div class="contact-item">
-                            <i class="fas fa-map-marker-alt me-2"></i>
-                            <span>123 Business St, City, State 12345</span>
+                            <i class="fas fa-clock me-2"></i>
+                            <span>Mon-Fri: 9:00 AM - 6:00 PM IST</span>
                         </div>
                     </div>
                 </div>
@@ -763,9 +792,8 @@
                 </div>
                 <div class="col-md-6 text-md-end">
                     <div class="footer-legal">
-                        <a href="#" class="legal-link">Privacy Policy</a>
-                        <a href="#" class="legal-link">Terms of Service</a>
-                        <a href="#" class="legal-link">Cookie Policy</a>
+                        <a href="privacy-policy.php" class="legal-link">Privacy Policy</a>
+                        <a href="terms-of-service.php" class="legal-link">Terms of Service</a>
                     </div>
                 </div>
             </div>
