--- a/index.html
+++ b/index.html
@@ -787,6 +787,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Custom JS -->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script1.js"></script>
 </body>
 </html>
