Add favicon file

--- a/WHY_500_ERROR.html
+++ b/WHY_500_ERROR.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why 500 Error? - Quick Diagnostic</title>
+    <!-- Favicon - Primary ICO format for Google Search -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="16x16 32x32 48x48">
+    <!-- Favicon - PNG fallback -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon(2).png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon(2).png">
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon(2).png">
     <style>
         body {
             font-family: Arial, sans-serif;
