--- a/FIX_NOW.html
+++ b/FIX_NOW.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fix Companies Feature - Easy Setup</title>
+    <!-- Favicon - Primary ICO format for Google Search -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="16x16 32x32 48x48">
+    <!-- Favicon - PNG fallback -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon(2).png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon(2).png">
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon(2).png">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
